--- a/scss/_completed-work.scss
+++ b/scss/_completed-work.scss
@@ -36,8 +36,8 @@
     &:not(:last-child):after {
       position: absolute;
       content: "";
-      width: 12vw;
-      height: 8vw;
+      width: 130%;
+      height: 65%;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
