--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -58,7 +58,7 @@
     }
   }
   &__rights {
-    margin: 1rem 0;
+    padding: 1rem 0;
     text-align: center;
     font-size: variables.$text-font-size;
     &-link {
