--- a/scss/_testimonials-slider.scss
+++ b/scss/_testimonials-slider.scss
@@ -15,13 +15,14 @@
   }
   &__item {
     position: relative;
-    margin-left: 4rem;
-    //margin: 4rem;
-    max-width: 23.3rem;
     padding: 2.5rem 2rem 3.5rem 6rem;
     border-radius: 4.375rem 0rem;
     background: variables.$items-bg-color;
     box-shadow: 7px 7px 30px 5px rgba(66, 96, 84, 0.15);
+  }
+  &__item-wrapper {
+    box-sizing: border-box;
+    padding: 0 4rem;
   }
   &__item-image {
     @include mixins.image-contain;
