--- a/css/style.css
+++ b/css/style.css
@@ -897,4 +897,60 @@ body {
   background-color: #F8F8F8;
   -webkit-transition: opacity 0.2s ease-in-out;
   transition: opacity 0.2s ease-in-out;
+}
+
+.preloader {
+  position: relative;
+  margin: 40vh auto 0;
+  width: 13.2rem;
+  height: 9.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.preloader__wrapper {
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F8F8F8;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+.preloader__item {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  background: rgb(0, 255, 119);
+  background: rgb(0, 196, 92);
+  background: -webkit-gradient(linear, left top, right top, from(rgb(0, 196, 92)), color-stop(53%, rgb(0, 143, 41)), to(rgb(0, 77, 29)));
+  background: linear-gradient(90deg, rgb(0, 196, 92) 0%, rgb(0, 143, 41) 53%, rgb(0, 77, 29) 100%);
+  margin-bottom: 0.4rem;
+  top: calc(50% - 1.5rem);
+  border-radius: 0.7rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.preloader__item:not(:last-child) {
+  margin-right: 0.4rem;
+}
+.preloader__item:first-child {
+  left: 0;
+  top: 0;
+}
+.preloader__item:nth-child(2) {
+  left: 0;
+}
+.preloader__item:nth-child(3) {
+  left: 3.4rem;
+}
+.preloader__item:nth-child(4) {
+  left: 6.8rem;
+}
+.preloader__item:last-child {
+  left: 10.2rem;
 }/*# sourceMappingURL=style.css.map */
