--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,16 @@
 @use 'normalize';
 @use 'variables';
 @use 'general';
-@use 'header';
-@use 'modern-interior';
-@use 'our-service';
-@use 'about-us';
-@use 'successful-working';
-@use 'completed-work';
-@use 'testimonials';
-@use 'latest-news';
-@use 'sign-up';
-@use 'footer';
-@use 'is-user-here';
-@use 'congratulations';
-@use 'preloader';
+@use '../blocks/header/header';
+@use '../blocks/modern-interior/modern-interior';
+@use '../blocks/our-service/our-service';
+@use '../blocks/about-us/about-us';
+@use '../blocks/successful-working/successful-working';
+@use '../blocks/completed-work/completed-work';
+@use '../blocks/testimonials/testimonials';
+@use '../blocks/latest-news/latest-news';
+@use '../blocks/sign-up/sign-up';
+@use '../blocks/footer/footer';
+@use '../blocks/is-user-here/is-user-here';
+@use '../blocks/congratulations/congratulations';
+@use '../blocks/preloader/preloader';
