--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,19 +1,22 @@
 ///// Colors //////
-$bg-color-1: #FFF;
-$bg-color-2: #F8F8F8;
+$bg-color-1: #fff;
+$bg-color-2: #f8f8f8;
 $text-main-color: #646464;
 $titles-main-color: #212121;
-$header-signUp-button-bg: #CAA892;
-$button-main-color: #FFF;
-$button-hover-color: #37806B;
-$button-bg-color: #37806B;
-$our-service-hover-bg: #CAA892;
-$image-decor-color: #CAA892;
-$items-bg-color: #FFF;
+$header-signUp-button-bg: #caa892;
+$button-main-color: #fff;
+$button-hover-color: #37806b;
+$button-bg-color: #37806b;
+$our-service-hover-bg: #caa892;
+$image-decor-color: #caa892;
+$items-bg-color: #fff;
 ///// Font //////
 $title-font-size: 3rem;
 $subtitle-font-size: 1.25rem;
 $text-font-size: 1.125rem;
+$title-font-size-mob: 2rem;
+$subtitle-font-size-mob: 1.1rem;
+$text-font-size-mob: 1rem;
 $btn-font-size-l: 1.125rem;
 $btn-font-size-s: 1rem;
 $font-weight-normal: 400;
@@ -23,3 +26,4 @@ $font-weight-bold: 700;
 ///// Size //////
 $image-decor-border-radius-1: 8.75rem 0rem;
 $image-decor-border-radius-2: 6.25rem 0rem;
+$image-decor-border-radius-mob: 3rem 0rem;
