--- a/blocks/header/_header.scss
+++ b/blocks/header/_header.scss
@@ -43,8 +43,8 @@
     flex-shrink: 0;
     font-weight: variables.$font-weight-semibold;
     font-size: 1rem;
-    padding: 3px 19px;
-    border-radius: 15px 0px;
+    padding: 0.3rem 1rem;
+    border-radius: 1rem 0;
     color: variables.$button-main-color;
     background-color: variables.$header-signUp-button-bg;
     border: 3px solid transparent;
