--- a/blocks/completed-work/_completed-work.scss
+++ b/blocks/completed-work/_completed-work.scss
@@ -16,8 +16,13 @@
   }
   &__diagram-item {
     position: relative;
+    width: 12vw;
+    height: 12vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     box-sizing: border-box;
-    padding: 3.1rem 0;
     text-align: center;
     border-radius: 2.5rem 0rem;
     background: variables.$items-bg-color;
@@ -32,31 +37,11 @@
       font-size: variables.$text-font-size;
       width: 12rem;
     }
-
-    &:not(:last-child):after {
+    &-svg {
       position: absolute;
-      content: "";
-      width: 130%;
-      height: 65%;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      left: 12rem;
     }
     &:nth-child(2n) {
-      top: 6rem;
-    }
-    &:first-child:after {
-      background-image: url(../blocks/completed-work/img/completed-work-line-1.svg);
-      top: 5vw;
-    }
-    &:nth-child(2):after {
-      background-image: url(../blocks/completed-work/img/completed-work-line-2.svg);
-      top: -1vw;
-    }
-    &:nth-child(3):after {
-      background-image: url(../blocks/completed-work/img/completed-work-line-3.svg);
-      top: 50%;
+      top: 6vw;
     }
   }
 }
