--- a/blocks/testimonials-slider/_testimonials-slider.scss
+++ b/blocks/testimonials-slider/_testimonials-slider.scss
@@ -14,6 +14,8 @@
     right: 4rem;
     button {
       transition: opacity 0.2s ease-in-out;
+      @include mixins.image-contain;
+      width: 3rem;
       &:hover {
         opacity: 0.7;
       }
