--- a/blocks/latest-news/_latest-news.scss
+++ b/blocks/latest-news/_latest-news.scss
@@ -20,6 +20,9 @@
     opacity: 0;
     transition: opacity 0.4s ease-in-out;
     flex: 0 1 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     &-image {
       @include mixins.image-cover;
       @include mixins.image-decor;
