--- a/blocks/about-us/_about-us.scss
+++ b/blocks/about-us/_about-us.scss
@@ -50,3 +50,21 @@
     }
   }
 }
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .about-us {
+    &__inner {
+      align-items: unset;
+    }
+    &__info {
+      padding: 0;
+      flex: 0 0 45%;
+    }
+    &__image {
+      flex: 0 0 45%;
+    }
+    &__title {
+      font-size: 2.5rem;
+      line-height: unset;
+    }
+  }
+}
