--- a/blocks/completed-work/_completed-work.scss
+++ b/blocks/completed-work/_completed-work.scss
@@ -47,18 +47,29 @@
 }
 @media (max-width: 575.98px) {
   .completed-work {
+    &__diagram-item {
+      width: 30vw;
+      height: 30vw;
+      &-number {
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
+@media (max-width: 767.98px) {
+  .completed-work {
     margin-top: 5rem;
     &__title {
       @include mixins.title-mob;
     }
     &__diagram {
+      margin-left: 15vw;
       flex-direction: column;
       gap: 2rem;
       padding: 0;
+      justify-content: center;
     }
     &__diagram-item {
-      margin: 0 auto;
-      width: 75%;
       top: 0 !important;
       &::after {
         display: none;
@@ -66,6 +77,32 @@
       &-text {
         width: unset;
       }
+      &:nth-child(2n) {
+        left: 30vw;
+      }
+      &-svg {
+        display: none;
+      }
+    }
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .completed-work {
+    &__diagram-item {
+      width: 25vw;
+      height: 25vw;
+    }
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .completed-work {
+    margin-top: 5rem;
+    &__title {
+      @include mixins.title-mob;
+    }
+    &__diagram-item {
+      width: 17vw;
+      height: 17vw;
     }
   }
 }
