--- a/blocks/congratulations/_congratulations.scss
+++ b/blocks/congratulations/_congratulations.scss
@@ -19,8 +19,10 @@
   text-align: center;
   margin: 20vh auto 0;
   width: 60%;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
-@media (max-width: 575.98px) {
+@media (max-width: 992px) {
   .congratulations {
     font-size: 2rem;
   }
