--- a/blocks/footer/_footer.scss
+++ b/blocks/footer/_footer.scss
@@ -21,7 +21,7 @@
   }
   &__logo {
     margin-bottom: 1rem;
-    width: 45%;
+    width: 10rem;
     @include mixins.image-contain;
   }
   &__line {
@@ -69,7 +69,7 @@
     }
   }
 }
-@media (max-width: 575.98px) {
+@media (max-width: 991.98px) {
   .footer {
     &__inner {
       gap: 3rem;
