--- a/blocks/our-service/_our-service.scss
+++ b/blocks/our-service/_our-service.scss
@@ -97,11 +97,9 @@
   .our-services {
     margin-top: 5rem;
     &__filter-buttons {
-      // flex-direction: column;
       gap: 1rem;
       flex-wrap: wrap;
       justify-content: center;
-      // align-items: center;
     }
     &__filter-btn {
       width: 5rem;
@@ -114,6 +112,35 @@
     }
     &__title {
       @include mixins.title-mob;
+    }
+  }
+}
+@media (min-width: 576px) and (max-width: 991.98px) {
+  .our-services {
+    margin-top: 5rem;
+    &__filter-buttons {
+      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__filter-btn {
+      width: 5rem;
+    }
+    &__items {
+      margin: 2rem 0;
+    }
+    &__item {
+      flex: unset;
+    }
+    &__title {
+      @include mixins.title-mob;
+    }
+  }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .our-services {
+    &__filter-buttons {
+      gap: 2rem;
     }
   }
 }
